# mosque-platform

./: .gitignore  README.md  ci-cd.yml  docker-compose.dev.yml  docker-compose.prod.yml  init.sql  mosque-platform.conf  mosque_validator.py  nginx.conf  package-lock.json  package.json  scraper_worker.py  setup-dev.sh  turbo.json
apps/backend/: Dockerfile.dev  package.json
apps/backend/src/: server.ts
apps/backend/src/config/: env.ts
apps/backend/src/db/: client.ts
apps/backend/src/plugins/: index.ts
apps/backend/src/repositories/: mosque.repository.ts
apps/backend/src/routes/: index.ts
apps/backend/src/routes/mosque/: index.ts
apps/backend/src/routes/prayer/: index.ts
apps/backend/src/routes/user/: index.ts
apps/backend/src/services/: auth.service.ts  mosque.service.ts
apps/frontend/: Dockerfile.dev  package.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/mosques/: page.tsx
apps/frontend/src/components/mosque/: MosqueCard.tsx  SearchFilters.tsx
apps/frontend/src/lib/: api.ts
apps/scraper/: .env.example  Dockerfile.dev  pyproject.toml
apps/scraper/scripts/: test_extraction.py
apps/scraper/src/: main.py
apps/scraper/src/config/: seeds.py  settings.py
apps/scraper/src/extractors/: ai_extractor.py  web_scraper.py
apps/scraper/src/mosque_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/scraper/src/publishers/: api_publisher.py
apps/scraper/src/schedulers/: job_scheduler.py
apps/scraper/src/validators/: mosque_validator.py
infrastructure/docker/postgres/: init.sql
(+1 files in other folders)
