[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosque-scraper"
version = "1.0.0"
description = "AI-powered mosque data scraping service"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.44.0",
    "openai==1.30.0",
    "pydantic==2.7.0",
    "pydantic-settings==2.3.0",
    "aiohttp==3.9.5",
    "phonenumbers==8.13.37",
    "loguru==0.7.2",
    "tenacity==8.3.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "ruff==0.4.7",
    "black==24.4.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
